# arian

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.tmp1/: Arian_Competitive_Proposal.md  proposal.md
docs/: GITFLOW.md  RELEASE_NOTES.md  USAGE.md
docs/adr/: ADR-001-lazy-content-loading.md  ADR-002-ast-analysis-caching.md  ADR-003-context-chunk-naming.md
docs/architecture/: ADR-001-lazy-content-loading.md  ADR-002-ast-analysis-caching.md  ADR-003-context-chunk-naming.md
docs/plan/: ARCHITECTURE-MASTER-PLAN.md  architecture-refactoring.md  architecture-target.md  cli-option-concerns.md  enforce-gitflow-rules.md  engineering-team-plan.md  fix-cli-arguments.md  fix-template-missing-in-pypi.md  lazy-loading-01.md  pip-release-strategy.md  token-budget-fix-postmortem.md
docs/task/: input-scoping-and-output-audit.md
scripts/: clean.sh  gitflow.sh  lint.sh  pre-commit  setup.sh
scripts/lint/: a_prefix_check.sh  common.sh  global_check.sh  google_style_check.sh  import_check.sh  pylint_check.sh  pylintrc  pyright.sh  return_check.sh  ruff_check.sh  ruff_format.sh
scripts/setup/: cicd.sh  common.sh  conda.sh  pyproject.sh  python.sh  verify.sh  vscode.sh
src/arian/: __init__.py  __main__.py  main.py
src/arian/application/: __init__.py  application.py  context.py  orchestrator.py  validator.py
src/arian/bootstrap/: __init__.py  application.py  lifespan.py  logging.py  logging_filters.py  progress.py  validator.py
src/arian/controller/: __init__.py  cli.py
src/arian/controller/cli/: __init__.py  app.py  commands.py  parsing.py
src/arian/domain/: __init__.py  enums.py  exceptions.py  models.py  protocols.py
src/arian/domain/context/: __init__.py  models.py
src/arian/domain/repository/: __init__.py  models.py
src/arian/domain/shared/: __init__.py  constants.py  enums.py  events.py  language.py  output.py  path_filter.py  secrets.py  security.py  tokenizer.py
src/arian/infrastructure/: __init__.py  config.py  file_output_writer.py  gitignore_filter.py  language.py  output_path_resolver.py  retry.py  tokenizer.py
src/arian/infrastructure/git/: __init__.py  analyzer.py
src/arian/infrastructure/ignore/: __init__.py  default_patterns.py
src/arian/infrastructure/mcp/: README.md  __init__.py
src/arian/infrastructure/output/: __init__.py  protocols.py
src/arian/infrastructure/sqlite/: __init__.py  connection.py
src/arian/infrastructure/tokenizer/: __init__.py
src/arian/pipeline/: __init__.py  renderer_pipeline.py  splitter_pipeline.py
src/arian/renderer/: __init__.py  language.py  markdown.py  protocols.py
src/arian/renderer/markdown/: __init__.py  renderer.py
src/arian/renderers/: __init__.py  markdown.py
src/arian/renderers/markdown/: __init__.py  renderer.py
src/arian/repositories/: __init__.py  collector.py  protocols.py  writer.py
src/arian/repositories/filesystem/: __init__.py  collector.py
src/arian/repositories/index/: __init__.py  protocols.py  sqlite_repository.py
src/arian/repository/: __init__.py  collector.py  protocols.py  writer.py
src/arian/repository/filesystem/: __init__.py  collector.py  protocols.py
src/arian/repository/index/: __init__.py  memory_repository.py  sqlite_repository.py
src/arian/service/: __init__.py  context_builder.py
src/arian/service/analyzer/: __init__.py  python_analyzer.py
src/arian/service/builder/: __init__.py  context_builder.py
src/arian/service/classifier/: __init__.py  file_classifier.py
src/arian/service/context/: materializer.py
src/arian/service/planner/: __init__.py  context_planner.py
src/arian/service/summary/: __init__.py  summary_service.py
src/arian/services/: __init__.py  analyzer.py  compressor.py  context_builder.py  language.py
src/arian/services/analyzer/: __init__.py
src/arian/services/builder/: __init__.py  context_builder.py
src/arian/services/classifier/: __init__.py
src/arian/services/context/: __init__.py  materializer.py
src/arian/services/planner/: __init__.py  context_planner.py
src/arian/template/: document.md.jinja2
src/arian/templates/: __init__.py  document.md.jinja2
tests/: test_architecture.py
tests/application/: test_application.py  test_validator.py
tests/bootstrap/: __init__.py  test_application.py  test_logging_filters.py  test_validator.py
tests/controller/: test_cli.py  test_parsing.py
tests/domain/: test_enums.py  test_enums_extended.py  test_exceptions.py  test_models.py
tests/domain/context/: test_models.py
tests/domain/repository/: test_models.py
tests/domain/shared/: test_constants.py  test_enums.py  test_events.py  test_language.py  test_secrets.py  test_security_extended.py
tests/infrastructure/: test_config.py  test_file_output_writer.py  test_gitignore_filter.py  test_output_path_resolver.py  test_retry.py  test_tokenizer.py
tests/infrastructure/output/markdown/: test_renderer.py
tests/integration/: test_bug_fix_workflow.py  test_context_builder.py  test_large_file_handling.py  test_lazy_loading.py
tests/pipeline/: test_pipelines.py
tests/renderer/: test_markdown.py
tests/renderer/markdown/: test_renderer.py
tests/renderers/: test_markdown.py
tests/renderers/markdown/: test_renderer.py
tests/repositories/: test_collector_writer.py
tests/repositories/index/: test_memory_repository.py
tests/repository/: test_collector_writer.py
tests/repository/filesystem/: test_collector_stats.py
tests/repository/index/: test_contract.py  test_memory_repository.py
tests/service/: test_context_builder.py
tests/service/analyzer/: test_python_analyzer.py
tests/service/classifier/: test_file_classifier.py
tests/service/context/: test_materializer.py
tests/service/planner/: test_context_planner.py
tests/service/summary/: test_summary_service.py
tests/services/: test_analyzer_compressor.py  test_context_builder.py
tests/services/analyzer/: test_python_analyzer.py
tests/services/classifier/: test_file_classifier.py
tests/services/planner/: test_context_planner.py
(+2 files in other folders)
